Adding "conference includes..."

--- a/djangocon/templates/attendees/register.html
+++ b/djangocon/templates/attendees/register.html
@@ -55,6 +55,15 @@
 							<strong>Not sure which ticket to purchase?</strong> Consult the guidelines in the sidebar (to the right).
 							This is a community-supported conference; <strong>please be honest when choosing a ticket type</strong>.
 						</p>
+						<p>
+							Registration for the conference includes:
+						</p>
+						<ul>
+							<li>Access to all talks and sessions</li>
+							<li>Coffee and snacks during breaks</li>
+							<li>Lunch at one of three restaurants near the venue</li>
+							<li>Free wifi at the conference</li>
+						</ul>
                         <div class="formrow clearfix">
                             {{ form.ticket_type.label_tag }}
                             {{ form.ticket_type }}
