Grr, stray brace in CSS.

--- a/djangocon/templates/venue.html
+++ b/djangocon/templates/venue.html
@@ -59,7 +59,7 @@
             <p>Palisadenstraße 48, 10243 Berlin, Germany</p>
 			<p>
                 <a href="http://maps.google.com/maps/place?cid=11679138350169366042&hl=en" target="_blank">
-                    <img id="map" src="http://maps.google.com/maps/api/staticmap?center=52.517892,13.427555&zoom=13&markers=52.518792,13.439455&size=300x250&sensor=false&key=ABQIAAAAfRw5BHIgeTTl0Nr3llv40BSu6dX-ok0Ee4KvO5-Eu4vc0f4aehQV-M2fGCz5p7FMYeiAHfM-EIznqQ" alt="Maps" />
+                    <img id="venue_map" src="http://maps.google.com/maps/api/staticmap?center=52.517892,13.427555&zoom=13&markers=52.518792,13.439455&size=300x250&sensor=false&key=ABQIAAAAfRw5BHIgeTTl0Nr3llv40BSu6dX-ok0Ee4KvO5-Eu4vc0f4aehQV-M2fGCz5p7FMYeiAHfM-EIznqQ" alt="Maps" />
                 </a>
             </p>
         </section>
