HTML5 Validation Fixes

--- a/djangocon/templates/home.html
+++ b/djangocon/templates/home.html
@@ -5,7 +5,7 @@
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.cycle.all.min.js"></script>
     
     <script type="text/javascript" src="{{ STATIC_URL }}js/jquery.infieldlabel.js"></script>
-    <script type="text/javascript" charset="utf-8">
+    <script type="text/javascript">
         $(document).ready(function() {
             // $('#tagline_wrap').cycle({ timeout: 5000 });
             
