--- a/djangocon/templates/venue.html
+++ b/djangocon/templates/venue.html
@@ -2,7 +2,7 @@
 {% block title %}Venue{% endblock %}
 
 {% block extra_css %}
-	<link rel="stylesheet" href="{{ STATIC_URL }}css/colorbox.css" type="text/css" media="screen" title="Basic Style" charset="utf-8">
+	<link rel="stylesheet" href="{{ STATIC_URL }}css/colorbox.css" type="text/css" media="screen" title="Basic Style">
 {% endblock extra_css %}
 
 {% block extra_js %}
