--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
     <script type="text/javascript" src="{{ STATIC_URL }}js/html5.js"></script>
 
-	<script type="text/javascript" charset="utf-8">
+	<script type="text/javascript">
         // http://paulirish.com/2009/fighting-the-font-face-fout/#defeatthefout
         (function(){
           // if firefox 3.5+, hide content till load (or 3 seconds) to prevent FOUT
