Fixing typo, removing link to sponsor details

--- a/djangocon/templates/home.html
+++ b/djangocon/templates/home.html
@@ -31,7 +31,7 @@
 		<h1>About the Conference</h1>
 		<p>DjangoCon returns for its second year in Europe; the first as a wholly community-supported conference. Come join
 		us in Berlin for a week of great talks on topics in Django and web development, with all the hacking, socializing and sprinting
-		you'd expect from the Django community!></p>
+		you'd expect from the Django community!</p>
 		<p><a href="{% url about %}">More about DjangoCon Europe 2010 &rarr;</a></p>
 	</section>
 	<section class="grid_6 home_split_info" id="home_sponsors">
@@ -39,7 +39,7 @@
 		<p>DjangoCon draws several hundred smart Django hackers from across the globe&mdash;support the conference and gain a
 		place in their hearts and minds. We're open to both financial and "in-kind" sponsorships; <a href="mailto:sponsors@djangocon.eu">contact us today</a> and we'll
 		figure out a solution that gets you name noticed by our attendees.</p>
-		<p><a href="{% url sponsoring %}">More about sponsoring the conference &rarr;</a></p>
+		<p><a href="mailto:sponsors@djangocon.eu">Sponsor DjangoCon.eu! &rarr;</a></p>
 	</section>
 	
 	<section class="grid_6" id="home_latest_blog">
