--- a/djangocon/templates/blog/post_archive.html
+++ b/djangocon/templates/blog/post_archive.html
@@ -1,10 +1,26 @@
 {% extends "blog/base.html" %}
 {% block title %}Blog Archive{% endblock %}
 
-{% block postcontent %}
-<div class="blog-archive">
-    {% for object in latest %}
-        {% include "blog/post.html" %}
-    {% endfor %}
-</div>
-{% endblock %}
+
+{% block blog_content %}
+	{% for object in latest %}
+	    {% include "blog/post.html" %}
+	{% endfor %}
+{% endblock blog_content %}
+
+{% block blog_sidebar %}
+	<h1>Archive</h1>
+	<ul>
+		{% for month in blog_months %}
+			<li><a href="{% url blog_archive_month year=month.year,month=month|date:"M"|lower %}">{{ month|date:"F" }}</a></li>
+		{% endfor %}
+	</ul>
+	<hr>
+	<h1>Tags</h1>
+	<ul id="blog_tags">
+		{% for tag in blog_tags %}
+			<li><a href="{% url blog_archive_tag tag.slug %}">{{ tag }}</a> <small>{{ tag.items.count }} post{{ post|pluralize }}</small></li>
+		{% endfor %}
+	</ul>
+{% endblock blog_sidebar %}
+
