--- a/djangocon/templates/blog/post.html
+++ b/djangocon/templates/blog/post.html
@@ -1,23 +1,23 @@
 <article class="blog_snippet clearfix">
 	<header>
-		<h1><a href="{{ object.get_absolute_url }}">{{ object.title }}</a></h1>
-		<h2>Posted by <strong>{{ object.author.first_name }}</strong> &bull; <strong>{{ object.published|date:"F jS" }}</strong></h2>
+		<h1><a href="{{ post.get_absolute_url }}">{{ post.title }}</a></h1>
+		<h2>Posted by <strong>{{ post.author.first_name }}</strong> &bull; <strong>{{ post.published|date:"F jS" }}</strong></h2>
 	</header>
     
 	<div class="blog-body">
-        {% if object.tease.raw %}
-            {{ object.tease }}
+        {% if post.tease.raw %}
+            {{ post.tease }}
         {% else %}
-            {{ object.body }}
+            {{ post.body }}
         {% endif %}
     </div>
     
 	<footer>
-		<p><a href="{{ object.get_absolute_url }}">Read post &rarr;</a></p>
-		{% if object.tags.all %}
+		<p><a href="{{ post.get_absolute_url }}">Read post &rarr;</a></p>
+		{% if post.tags.all %}
             <p class="taglist">
 				Tagged
-				{% for tag in object.tags.all %}
+				{% for tag in post.tags.all %}
 					<a href="{% url blog_archive_tag tag.slug %}">{{ tag }}</a>{% if not forloop.last %},{% endif %}
 				{% endfor %}
 			</p>
