--- a/djangocon/templates/venue.html
+++ b/djangocon/templates/venue.html
@@ -51,15 +51,15 @@
 				<li><strong>Coming soon:</strong> Local tips: be more awesome than the average tourist.</li>
 				<li><strong>Coming soon:</strong> Sightseeing: be just like the average tourist.</li>
                 <li><a target="_blank" href="http://palisa.de/en/">Palisa.de - Conference Hall.</a></li>
-                <li><a target="_blank" href="http://maps.google.com/maps/place?cid=11679138350169366042&hl=en">View venue location on Google Maps.</a></li>
+                <li><a target="_blank" href="http://maps.google.com/maps/place?cid=11679138350169366042&amp;hl=en">View venue location on Google Maps.</a></li>
             </ul>
         </section>
         <section class="grid_5">
             <h1>Location</h1>
             <p>Palisadenstraße 48, 10243 Berlin, Germany</p>
 			<p>
-                <a href="http://maps.google.com/maps/place?cid=11679138350169366042&hl=en" target="_blank">
-                    <img id="venue_map" src="http://maps.google.com/maps/api/staticmap?center=52.517892,13.427555&zoom=13&markers=52.518792,13.439455&size=300x250&sensor=false&key=ABQIAAAAfRw5BHIgeTTl0Nr3llv40BSu6dX-ok0Ee4KvO5-Eu4vc0f4aehQV-M2fGCz5p7FMYeiAHfM-EIznqQ" alt="Maps" />
+                <a href="http://maps.google.com/maps/place?cid=11679138350169366042&amp;hl=en" target="_blank">
+                    <img id="venue_map" src="http://maps.google.com/maps/api/staticmap?center=52.517892,13.427555&amp;zoom=13&amp;markers=52.518792,13.439455&amp;size=300x250&amp;sensor=false&amp;key=ABQIAAAAfRw5BHIgeTTl0Nr3llv40BSu6dX-ok0Ee4KvO5-Eu4vc0f4aehQV-M2fGCz5p7FMYeiAHfM-EIznqQ" alt="Maps" />
                 </a>
             </p>
         </section>
