Fixing validation, duplicate element id

--- a/djangocon/templates/attendees/register.html
+++ b/djangocon/templates/attendees/register.html
@@ -113,7 +113,7 @@
                 </form>
             {% endif %}
         </section>
-        <section class="grid_4 sidebar" id="tickets_register">
+        <section class="grid_4 sidebar">
             <h1>Additional Information</h1>
 			<h2>Which rate should I pay?</h2>
 			<p>
