--- a/djangocon/templates/base.html
+++ b/djangocon/templates/base.html
@@ -3,11 +3,11 @@
 <head>
 	<meta charset="utf-8">
     <title>DjangoCon.eu 2010 - {% block title %}Berlin{% endblock %}</title>
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css" type="text/css" media="screen" title="Basic Style">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/960.css" type="text/css" media="screen" title="Basic Style">
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/local.css" type="text/css" media="screen" title="Basic Style">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/reset.css?v=2" type="text/css" media="screen" title="Basic Style">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/960.css?v=2" type="text/css" media="screen" title="Basic Style">
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/local.css?v=2" type="text/css" media="screen" title="Basic Style">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}js/html5.js"></script>
+    <script type="text/javascript" src="{{ STATIC_URL }}js/html5.js?v=2"></script>
 
 	<script type="text/javascript">
         // http://paulirish.com/2009/fighting-the-font-face-fout/#defeatthefout
