--- a/djangocon/templates/home.html
+++ b/djangocon/templates/home.html
@@ -38,7 +38,7 @@
 		<h1>Achtung Sponsors!</h1>
 		<p>DjangoCon draws several hundred smart Django hackers from across the globe&mdash;support the conference and gain a
 		place in their hearts and minds. We're open to both financial and "in-kind" sponsorships; <a href="mailto:sponsors@djangocon.eu">contact us today</a> and we'll
-		figure out a solution that gets you name noticed by our attendees.</p>
+		figure out a solution that gets your name noticed by our attendees.</p>
 		<p><a href="mailto:sponsors@djangocon.eu">Sponsor DjangoCon.eu! &rarr;</a></p>
 	</section>
 	
