--- a/djangocon/templates/legal_notices.html
+++ b/djangocon/templates/legal_notices.html
@@ -25,6 +25,8 @@
 
             Vereinsregister: Amtsgericht Leipzig
             Registernummer: VR 4814
+            
+            Umsatzsteuer-Identifikationsnummer: DE269932358
             {% endfilter %}
 
             <h1>Haftungshinweis</h1>
