added infos for new tickets

--- a/djangocon/templates/attendees/register.html
+++ b/djangocon/templates/attendees/register.html
@@ -59,8 +59,15 @@
 				<ul>
 					<li>Access to all talks and sessions</li>
 					<li>Coffee and snacks during breaks</li>
-					<li>Lunch at one of three restaurants near the venue</li>
 					<li>Free wifi at the conference</li>
+				</ul>
+				
+				<p>
+				    Non-eco rates (<i>all except <strong>Hobbyist-Eco</strong></i>) also includes:
+				</p>
+				<ul>
+				    <li>Lunch at one of three restaurants near the venue</li>
+				    <li>Conference giveaways</li>
 				</ul>
 				
 				<p>We currently sell tickets using:</p>
@@ -190,6 +197,17 @@
 				The short answer: if you are paying your own way to the conference, select <strong>Hobbyist</strong>. If
 				your employer is paying for you to attend DjangoCon, select <strong>Corporate</strong>.
 			</p>
+			
+			<h2>Hobbyist-Eco rate</h2>
+			<p>
+			    The Hobbyist-Eco rate is for guests who just want to join the conference with minimal effort. 
+			    This rate doesn't include lunch and giveaways. You have to look after lunch for yourself.
+			</p>
+            <h2>Hobbyist-DDV rate</h2>
+            <p>
+                The Hobbyist-DDV rate is for members of the German Django Association only.
+                We will validate your membership and cancel the booking if you are not a member.
+            </p>
             <h2>Student rate</h2>
             <p>
                 The student rate is for full-time students only and is limited in number. Academics and employees of
