added note to giveaways

--- a/djangocon/templates/attendees/register.html
+++ b/djangocon/templates/attendees/register.html
@@ -67,7 +67,7 @@
 				</p>
 				<ul>
 				    <li>Lunch at one of three restaurants near the venue</li>
-				    <li>Conference giveaways</li>
+				    <li>Conference giveaways (separately purchasable)</li>
 				</ul>
 				
 				<p>We currently sell tickets using:</p>
