added signature stuff

--- a/djangocon/templates/attendees/mail_registration_complete.html
+++ b/djangocon/templates/attendees/mail_registration_complete.html
@@ -23,6 +23,9 @@ Deutscher Django-Verein e. V.
 Erich-Zeigner-Allee 52, 04229 Leipzig, Deutschland
 Eingetragen im Amtsgericht Leipzig, VR 4814
 
+Der Verein wird vertreten durch den Vorstand:
+Markus Zapke-Gründemann, Martin Mahner und Florian Schlachter
+
 kontakt@django-de.org
 Fon: +49 341 39 299 290 (Mo. - Fr. 16:00-18:00 Uhr)
 Fax: +49 3212 100 74 39
