--- a/djangocon/templates/attendees/mail_payment_received.html
+++ b/djangocon/templates/attendees/mail_payment_received.html
@@ -15,10 +15,10 @@ Payment details:
 
 Receipt No: EDC-A-{{ attendee.pk }}
 -----------------------------------
-1x Ticket - {{ attendee.payment_fee|floatformat:2 }} EUR
-Tax (19%) - {% if not attendee.ticket_type.vatid_needed %}{{ attendee.payment_tax|floatformat:2 }} EUR{% else %}reverse-charge-system *{% endif %}
+1x Ticket  {{ attendee.payment_fee|floatformat:2 }} EUR
+Tax (19%)  {% if not attendee.ticket_type.vatid_needed %}{{ attendee.payment_tax|floatformat:2 }} EUR{% else %}reverse-charge-system *{% endif %}
 -----------------------------------
-Total     - {{ attendee.payment_total|floatformat:2 }} EUR
+Total      {{ attendee.payment_total|floatformat:2 }} EUR
 -----------------------------------
 
 {% if attendee.ticket_type.vatid_needed %}* VAT reversed (Buyer VAT ID.: {{ attendee.vat_id }}){% endif %}
