--- a/djangocon/templates/blog/base.html
+++ b/djangocon/templates/blog/base.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}Blog{% endblock title %}
 
+{% block extra_head %}
+    <link rel="alternate" type="application/atom+xml" title="Latest blog posts" href="{% url blog_rss %}" />
+{% endblock extra_head %}
+
 {% block content %}
     <div class="container_12 clearfix">
         <section class="grid_7 suffix_1" id="blog_content">
