Extended talk deadlines.

--- a/djangocon/templates/talks/submit.html
+++ b/djangocon/templates/talks/submit.html
@@ -125,8 +125,8 @@
 			<p>We've done our best to keep the administrativa to a minimum, please read the guidelines carefully before submitting a talk.</p>
 			<h2>Dates</h2>
 			<ul>
-				<li><strong>April 15<sup>th</sup></strong>: submission deadline</li>
-				<li><strong>April 22<sup>nd</sup></strong>: acceptance announcements</li>
+				<li><strong>May 1<sup>st</sup></strong>: submission deadline</li>
+				<li><strong>May 7<sup>th</sup></strong>: acceptance announcements</li>
 			</ul>
 			
 			<h2>Speaker Registration</h2>
